...
    <string name="btn_settings">Settings (F11)</string>
    <string name="btn_encoding">Encoding</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>

    <string name="folder">Folder</string>
    <string name="virtual_folder">Virtual Folder</string>
    <string name="archive">Archive</string>
    <string name="folder_root">Root</string>
    <string name="folder_up">Up</string>

    <string name="dialog_actions">Actions</string>

    <string name="canceled">Canceled by user</string>
    <string name="new_file">File</string>
    <string name="new_folder">Directory</string>
    <string name="last_modified">Last Modified</string>
    <string name="permissions">Permissions</string>
...
    <string name="archive_extract_to">Extract archive files to</string>
    <string name="btn_quick_view">Quick View</string>
    <string name="btn_diff">Diff</string>
    <string name="btn_find">Find</string>
    <string name="btn_network">Network</string>
    <string name="btn_goto">Goto</string>
    <string name="btn_more">More</string>
    <string name="btn_tools">Tools</string>
    <string name="btn_help">Help (F10)</string>
    <string name="line_number">Line number</string>
    <string name="percents">Percents</string>
    <string name="containing_text">Containing text</string>
    <string name="whole_words">Whole words</string>
...
    <string name="main_panel_size">Calculated size of selected files (excluding folders).</string>
    <string name="main_panel_expand">Expand panel by \'Swipe\' gesture to see more (must be enabled in \'Settings\').</string>
    <string name="main_panel_swipe">Swipe to see another panel.</string>
    <string name="full_screen_icon">Full screen mode.</string>
    <string name="full_screen_icon_summary">Use this button to open actions list.</string>

    <string name="current_path">Current Path</string>
    <string name="current_path_summary">Currently selected directory. Use long hold gesture to show quick navigation dialog.</string>
    <string name="tools">Tools Icons</string>
    <string name="tools_summary">Click icons to : \nOpen \'External Storage\' dialog \nAdd current directory to \'Favorites\' list.</string>
    <string name="tools_change_directory">Click icon to : open currently selected directory on opposite panel.</string>

    <string name="bottom_panel">Bottom Panel</string>
...
