<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_view"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <ListView
            android:listSelector="@color/transparent"
            android:divider="@color/transparent"
            android:fastScrollEnabled="true"
            android:descendantFocusability="beforeDescendants"
            android:id="@android:id/list"
            android:overScrollMode="never"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    <ProgressBar
            android:id="@android:id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

</RelativeLayout>