<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/root_view"
              android:background="#000000">

    <LinearLayout android:id="@+id/panels_holder"
                  android:layout_width="fill_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:paddingTop="2dp"
                  android:baselineAligned="false">

        <LinearLayout
                android:id="@+id/panel_left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="4dp"
                android:layout_height="fill_parent"/>

        <LinearLayout
                android:id="@+id/panel_right"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="4dp"
                android:layout_height="fill_parent"/>
    </LinearLayout>

    <com.openfarmanager.android.view.panels.MainToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

